update import map 1

--- a/index.html
+++ b/index.html
@@ -64,9 +64,13 @@
         #warp-button { right: 115px; width: 70px; height: 70px; background-color: #0077cc; border-radius: 50%; border: 2px solid #004488; display: flex; justify-content: center; align-items: center; color: white; font-weight: bold; font-size: 14px; transition: background-color 0.1s ease; /* Smooth toggle color */ }
         #warp-button.active { background-color: #004488; border-color: #002244; } /* 'active' class now controls pressed state */
     </style>
-    <script type="importmap">
-        { "imports": { "three": "https://unpkg.com/three@0.160.0/build/three.module.js" } }
-    </script>
+<script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.160.0/build/three.module.js"
+        }
+    }
+</script>
 </head>
 <body>
         <div id="hp-gauge-container">
