--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Space Fighter Sim - Varied TIEs</title>
     <style>
+            html, body {
+        margin: 0;
+        overflow: hidden;
+        height: 100%; 
+        width: 100%;  
+    }
         body { margin: 0; overflow: hidden; background-color: #000000; }
         canvas { display: block; }
         #info {
