--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         height: 100%; 
         width: 100%;  
     }
-        body { margin: 0; overflow: hidden; background-color: #000000; }
+        body { background-color: #000000; }
         canvas { display: block; }
         #info {
             position: absolute;
