--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         <div id="hp-gauge-bar"></div>
         <span id="hp-gauge-text">HP: 100</span>
     </div>
-    <div id="info">Use Arrow Keys to move, F to Fire, W for Warp</div>
+    <div id="info">Use Arrow Keys to move, F to Fire, W for Warp
+    Find and destroy the Star Destroyer & Tie Fighters</div>
     <canvas id="gameCanvas"></canvas>
     <div id="game-over-display"></div>
 
